--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   "author": "Adam Morgan",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.15.1",
-    "express": "^4.13.4",
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
     "morgan": "^1.7.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "angular": "^1.5.6",
-    "angular-mocks": "^1.5.6",
-    "angular-ui-router": "^0.3.0",
+    "angular": "^1.5.8",
+    "angular-mocks": "^1.5.8",
+    "angular-ui-router": "^0.3.1",
+    "gulp": "^3.9.1",
+    "gulp-uglify": "^2.0.0",
+    "gulp-util": "^3.0.7",
+    "gulp-watch": "^4.3.9",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^1.0.1",
